# jel

./: .gitignore  Cargo.toml  README.md  cfg.cfg  fixtures.json  flake.nix  index.php  merlin_gcc_overlay.nix  package.json  reload.php
.cargo/: config
.github/: upload_to_ftp.py
.github/workflows/: main.yml  package.yml  unittest.yml
diagrams/: component_overview.iuml
docker/: Dockerfile  nginx.conf
http_server/: Cargo.toml  package-lock.json
http_server/src/: cli.rs  http_server.rs  logger.rs  main.rs  redirect_server.rs
http_server/src/middleware/: football_info.rs  mod.rs  recordings.rs
http_server/src/services/: file_service.rs  get_file.rs  match_service.rs  mod.rs  recordings_service.rs  session_mananger.rs
http_server/src/tls/: https_connector.rs  mod.rs  tls_client_stream.rs  tls_config.rs  tls_stream.rs
http_server/www/: header.html  index.html  login.html
http_server/www/js/: fixtures.js  videojs-http-streaming.min.js
hyper_rusttls/: Cargo.toml
hyper_rusttls/src/: https_connector.rs  lib.rs  service.rs  tls_config.rs  tls_stream.rs
ronaldos_config/: Cargo.toml
ronaldos_config/src/: lib.rs
ronaldos_webserver/: Cargo.toml  build.rs  package-lock.json
ronaldos_webserver/src/: ffi_log.rs  http_server.rs  logger.rs  main.rs  root_service.rs  screen_grabber.cpp  tls_config.rs  tracing.hpp
ronaldos_webserver/src/handlers/: authentication.rs  mod.rs  redirect_service.rs
ronaldos_webserver/src/middleware/: cache_map.rs  football_info.rs  mod.rs  recordings.rs  screen_grabber.rs  session_manager.rs  stream_machine.rs
ronaldos_webserver/src/middleware/stream_store/: data_types.rs  file_watcher.rs  interface.rs  mod.rs
ronaldos_webserver/src/services/: authentication_service.rs  file_service.rs  fixture_service.rs  github_webhook.rs  mod.rs  recordings_service.rs  redirect_service.rs  session_mananger.rs  stream_service.rs
ronaldos_webserver/www/: fixtures_example.json  footer.html  header.html  index.html
ronaldos_webserver/www/js/: index.js
ronaldos_website/: Cargo.toml
ronaldos_website/src/: cli.rs  http_server.rs  main.rs
ronaldos_website/src/middleware/: football_info.rs  recordings.rs
ronaldos_website/src/services/: fixture_service.rs  github_webhook.rs  session_mananger.rs
ronaldos_website/www/: index.html
ronaldos_website/www/js/: index.js
screen_grabber/: PKGBUILD  control  install  roki_broadcast  roki_open  ronaldo.target  rtmp_server.service  systemd.install
scripts/: build_aarch64_openwrt.sh  cargo_ipk.py  create_ipk.sh  create_ipk_packages.py  encode2mp4.bat  encode2mp4.sh  export_www.sh  gen_ronaldo_packages.sh  push_HD60_feed.bat  roki_broadcast  roki_open  startup.sh  transcode.py  uacme.sh  update_to_vod.py
scripts/ci/: arch_entry_point.sh
systemd/: nginx.conf  rtmp_server.service  vnc_server.service  xvfb.service
test_certificates/: cfg.cfg  server.key
test_data/: cfg.cfg  football_response_example.json  server.crt  server.csr
uacme_renew/: Cargo.toml
uacme_renew/src/: log.rs  main.rs
