[package]
name = "hyper_rusttls"
version = "0.1.0"
edition = "2021"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
description = "hyper http library + rustls wrappers"

[dependencies]
tokio = { version = "*", features = ["net", "fs", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
bytes = "*"
async-trait = "*"
http = "*"
log = "*"
hyper = {version = "*", features = ["full", "tcp"]}
tokio-rustls = "*"
rustls-pemfile = "*"
futures-util = "*"
webpki-roots="*"
