[package]
name = "ronaldos-webserver"
version = "2.1.0"
edition = "2021"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
description = "Rust https server including ronaldo's own specific http services"

[dependencies]
clap = { version = "*", features = ["derive"] }
ronaldos_config = { path = "../ronaldos_config" }
tokio = { version = "*", features = [
    "net",
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tokio-stream = { version = "*", features = ["fs"] }
log = { version = "*", features = ["std"] }
futures-util = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
base64 = "*"
serde_yaml = "*"
chrono = { version = "*", features = ["serde"] }
notify = "*"
uuid = { version = "*", features = ["v4", "serde"] }
anyhow = "*"
actix-web = { version = "*", features = ["rustls"] }
actix-files = "*"
actix-service = "*"
actix-tls = { version = "*", features = ["rustls"] }
actix-limitation = "*"
hyper_rusttls = { path = "../hyper_rusttls" }
rustls = "*"
awc = { version = "*", features = ["rustls"] }
mime = "*"

[target.'cfg(not(windows))'.dependencies]
daemonize = "*"

[dev-dependencies]
tempdir = "*"
