[package]
name = "ronaldos-webserver"
version = "2.1.0"
edition = "2021"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
description = "Rust https server including ronaldo's own specific http services"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
ronaldos_config = { path = "../ronaldos_config" }
tokio = { version = "1.39.2", features = [
    "net",
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
futures-util = "0.3.30"
serde = { version = "1.0.206", features = ["derive"] }
base64 = "0.22.1"
serde_yaml = "0.9.34"
chrono = { version = "0.4.38", features = ["serde"] }
notify = "6.1.1"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
anyhow = "1.0.86"
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
awc = { version = "3.5.1", features = ["rustls-0_23"] }
rustls-native-certs = "0.7.1"
actix-service = "2.0.2"
actix-files = "0.6.6"
rustls-pemfile = "2.1.3"
rustls = "0.23.12"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
hashbrown = "0.14.5"
simd-json = "0.13.10"
paste = "1.0.15"

[dev-dependencies]
tempdir = "*"

[build-dependencies]
cc = "1.1.22"
