[package]
name = "ronaldos-webserver"
version = "0.2.0"
edition = "2021"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
description = "Rust https server including ronaldo's own specific http services"

[dependencies]
clap = { version="*", features = ["derive"] }
tokio = { version = "*", features = ["net", "fs", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
bytes = "*"
async-trait = "*"
http = "*"
log = "*"
hyper = {version = "*", features = ["full", "tcp"]}
futures-util = "*"
serde_json= "*"
serde = { version = "*", features = ["derive"] }
syslog = "*"
once_cell = "*"
base64="*"
serde_yaml="*"
hyper_rusttls = { path= "../hyper_rusttls" }
chrono = { version = "*", features = ["serde"] }
regex = "*"
daemonize = "*"
