[package]
name = "uacme-renew"
version = "0.1.0"
edition = "2021"
authors = ["Sven Rademakers <sven.rademakers@gmail.com>"]
description = "application that periodically executes an acme test and reloads ronaldos-webserver"

[dependencies]
ronaldos_config = { path="../ronaldos_config" }
clap = { version="*", features = ["derive"] }
daemonize = "*"
log = "*"

